# RE-analysis-generator

./: .bandit  .env.example  .env.sample  .gitignore  .gitleaks.toml  .mutmut-config  .pre-commit-config.yaml  .tdd-guard.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEBUGGING_COMPLETE.md  E2E_INTEGRATION_TEST_REPORT.md  EMAIL_CONFIGURATION.md  FINAL_SYSTEM_STATUS.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITHUB_ISSUE_RESOLUTION_REPORT.md  Makefile  PHASE3_DEPLOYMENT_COMPLETE.md  README.md  SECRET_MANAGEMENT.md  SECURITY_DEBUG_SUMMARY.md  SECURITY_RISK_ASSESSMENT.md  SETUP_SERVICES_GUIDE.md  TASK_04_IMPLEMENTATION_SUMMARY.md  WORKFLOW_ARCHITECTURE_REDESIGN.md  bandit-report.json  bandit_results.json  bandit_results_current.json  bandit_results_fixed.json  docker-compose.production.yml  fix_workflow_issues.py  index-detailed.md  index.md  pyproject.toml  pyright_current.json  pyright_final.txt  pyright_results.json  pyrightconfig.json  ruff_results.json  (+5 more)
.claude/: settings.json  settings.local.json
PRPs/: CLAUDE.md  TASK_6_PREPARATION_SUMMARY.md  phoenix-real-estate-data-collection.md  project-status-2025-01-23.md
config/: base.yaml  deploy-production.yaml  deploy-staging.yaml  development.yaml  llm-production.yaml  production-deployment.yaml  production-phoenix-mls.yaml  production-secrets.yaml.template  production.yaml  proxies.yaml.example  testing.yaml
docs/: COMPREHENSIVE_WORKFLOW_FIXES_DOCUMENTATION.md  FINAL_ACTION_PLAN.md  LLM_MONITORING_GUIDE.md  MARICOPA_API_ANALYSIS_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  SECRET_CONFIGURATION_GUIDE.md  (+21 more)
(+702 files in other folders)
