[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix-real-estate"
version = "0.1.0"
description = "Phoenix Real Estate Data Collection System"
requires-python = ">=3.13"
dependencies = [
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "tox>=4.11.0",
    "tdd-guard==0.5.2",
    "mutmut>=2.4.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "bandit>=1.7.0",
    "safety>=3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
tdd_guard_project_root = "/Users/Andrew/.vscode/RE-analysis-generator"
markers = [
    "production: marks tests as production scenario tests",
    "benchmark: marks tests as performance benchmarks",
    "slow: marks tests as slow running tests",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"
line-length = 100
EOF < /dev/null
